<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>neodriver_ros</name>
<version>0.1.0</version>
<description>ROS 2 Humble driver for Adafruit NeoDriver (I2C → NeoPixel) on Jetson</description>
<maintainer email="you@example.com">Your Name</maintainer>
<license>MIT</license>


<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>ament_python</buildtool_depend>


<depend>rclpy</depend>
<depend>std_msgs</depend>


<export>
<build_type>ament_python</build_type>
</export>
</package>
