<?xml version="1.0"?>
<package format="3">
  <name>selqie_tmux_ui</name>
  <version>0.1.0</version>
  <description>
    Tmux-based SELQIE control UI that launches all quadruped nodes in one pane
    while exposing an interactive console in the other pane.
  </description>

  <maintainer email="you@example.com">Ryan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>quad_legs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>motor_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
