<?xml version="1.0"?>
<package format="3">
  <name>servo</name>
  <version>0.1.0</version>
  <description>ROS2 node for CubeMars servo-mode CAN control (socketcan)</description>

  <maintainer email="you@example.com">Ryan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-can</exec_depend>
  <exec_depend>motor_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
